--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
       driver-class-name: org.h2.Driver
 
     hibernate:
-      ddl-auto: update #create update none
+      ddl-auto: create #create update none
     properties:
       hibernate:
         format_sql: true
